# raglab

./: .gitignore  Dockerfile  README.md  alexis_nb.ipynb  comparaisons.txt  setup.cfg
.github/workflows/: cd.yaml  ci.yml
docsrc/: index.rst
misc/: ad_raglab_streamline.ipynb  embeddings_metadata_story.tsv  embeddings_story.tsv  segmentation_lib.py  tw_raglab_wip.ipynb  tw_scrap.ipynb
misc/data_ad/: ragas_dataset.json  ragas_dataset_char.json  ragas_results_char.csv  ragas_results_char_600.csv  ragas_results_semantic.csv  ragas_results_semantic_600.csv  story.txt  writers.txt
misc/thomas/: chunking.ipynb  example.py
raglab/: Dockerfile  __init__.py  app.py  app_old.py  audio.py  raglab2.py  transformations.py  util.py
raglab/DT/: stacks_mining.py
raglab/fiddle_manager/: service.py
raglab/mermaid/: prompt_editor.md
raglab/rag/: README.md  __init__.py  advanced_features.py  advanced_sources.py  async_sources.py  chunking.py  cli.py  config.py  decoders.py  enhanced_pipeline.py  example_usage.py  hooks.py  metadata.py  pipeline.py  raglab_integration.py  refresh.py  sources.py  types.py  utils.py  vector_stores.py
raglab/retrieval/: VectorDB.py  chroma_client.py  lib_alexis.py  segmentation_lib.py
raglab/stores/: __init__.py  function_store.py  repos.py  simple_stores.py  sql_app_stores.py  stores_util.py  user_store.py
raglab/suggestion_engine/: suggestion_example.ipynb  suggestion_lib.py
raglab/templates/: chat.html  gate.html  login.html  raglab_home.html  raglab_query.html  raglab_query_result.html
raglab/tests/: test.db  test_app.py  (+1 more)
(+33 files in other folders)
