[metadata]
version = 0.0.1
description = Backend of a system to explore RAG operations
license = mit
description_file = README.md
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		
name = raglab
display_name = raglab

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
		

