[metadata]
name = raglab
version = 0.0.4
url = https://github.com/addaix/raglab
platforms = any
description_file = README.md
description = Backend of a system to explore RAG operations
license = mit
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = raglab

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	dol
	config2py
	i2
	dill

